Squash some bugs

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,6 +3,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: normal;
+  font-display: swap;
   font-weight: 100 900;
   src: url(/fonts/inter.woff2) format('woff2');
 }
